# wizard

./: .gitignore  .main.cpp.swp  .main2.cpp.swp  :w  CMakeLists.txt  auto_objects.xml  compile.sh  debug.sh  first_floor_walls.fbx  fish.fbx  fish10.fbx  four_walls.fbx  leaks.sh  main.cpp  main2.cpp  old_door.fbx  old_white_spine.fbx  outer_wall.fbx  profile.sh  ramp.fbx  run.sh  single_triangle.fbx  single_wall.fbx  stone_pillar.fbx  strange_ramp.fbx  terrain.data  test.sh  tower_first_floor.fbx  tower_first_floor_2.fbx  tower_first_floor_occluder.fbx  tower_first_floor_portal.fbx  tower_first_floor_sector.fbx  tower_floor.fbx  tower_inner_wall.fbx  tower_outer_wall.fbx  tower_outer_wall_lod0.fbx  tower_ramp.fbx  tower_walls.fbx  triangle_ramp.fbx  triangulated_walls.fbx  (+3 more)
3d_models/: fish2.fbx  fish3.fbx  fish4.fbx  fish5.fbx  fish6.fbx  fish7.fbx  fish8.fbx  fish9.fbx  warped_cube.fbx
dungeons/: dungeon1.txt
ideas/: bla  bla.cpp  context_panel.psd  dialog.psd  dialog_end.psd  economy.txt  icon.psd  ilona_eyes.psd  map2.psd  next_dialog.psd  pentagram2.ai  spell_interface.psd  splash.psd  water_ripple.psd
lib/libpng-1.6.37/: CMakeLists.txt
scripts/: bla  cephalid_script.txt  test.cc  test.py
shaders/: .f_object.swp  .f_screen.swp  .object.frag.swp  .solid.frag.swp  .terrain.frag.swp  .terrain.geom.swp  .terrain.vert.swo  .terrain.vert.swp  .v_screen.swp  2d_image.frag  2d_image_with_mask.frag  3d_particle.frag  3d_particle.vert  animated_object.frag  animated_object.geom  animated_object.vert  animated_object_noshadow.frag  animated_object_noshadow.vert  animated_shadow.vert  animated_transparent_object.frag  animated_transparent_object.geom  death.frag  detect_monster.frag  detect_monster.vert  dungeon.frag  dungeon.vert  far_terrain.frag  far_terrain.vert  fire.frag  fire.vert  hypercube.frag  hypercube.vert  load_interface.frag  load_interface.vert  mana_pool.frag  mana_pool.vert  noshadow_object.frag  noshadow_object.vert  object.frag  object.vert  (+27 more)
snippets/: bla  dot_product.cpp  height_problem.cpp
src/: .inventory.cpp.swn  .mesh.cpp.swp  .mesh.hpp.swp  2d.cpp  2d.hpp  4d.cpp  4d.hpp  ai.cpp  ai.hpp  asset.cpp  asset.hpp  collision.cpp  collision.hpp  collision_resolver.cpp  collision_resolver.hpp  convert_assets.cpp  craft.cpp  craft.hpp  debug.hpp  dialog.cpp  dialog.hpp  dungeon.cpp  dungeon.hpp  engine.cpp  engine.hpp  fbx_loader.cpp  fbx_loader.hpp  game_asset.cpp  game_asset.hpp  game_object.cpp  game_object.hpp  game_screen.cpp  game_screen.hpp  height_map.cpp  height_map.hpp  inventory.cpp  inventory.hpp  item.cpp  item.hpp  main.cpp  (+26 more)
test/: CMakeLists.txt  collision_test.cpp  dungeon_main.cpp  dungeon_test.cpp  example_test.cpp  fbx_test.cpp  util_test.cpp
